  o Bug Fixes:
    * cvc rdiff now functions correctly on trove versions where no
      previous version exists. (CNY-3218)
    * Updates of multiple flavored groups containing pre-update
      scripts no longer fail after the critical update is applied.
      The fixed Conary issue is related to CNY-3216, but only
      manifests itself when multiple groups are present.  (CNY-3219)

  o Internal Changes:
    * Conary will now link against an embedded copy of sqlite if a
      specific version of sqlite has previously been configured and
      built under the conary/pysqlite3/ directory.  At this time,
      the supported version is 3.6.18.

Changes in 2.0.49:
  o Bug Fixes:
    * Updates of flavored groups containing pre-update scripts no
      longer fail to continue after the critical update is applied.
      (CNY-3216)
    * Old rpm packages that do not have a PAYLOADCOMPRESSOR tag in their
      headers are correctly handled. (CNY-3210)

Changes in 2.0.48:
  o Bug Fixes:
    * A bug introduced in the previous release that caused installations
      of device nodes as a non-root user to crash has been fixed.
      (CNY-3208)

Changes in 2.0.47:
  o Bug Fixes:
    * Directory permissions are no longer unnecessarily updated if they
      have not changed. (CNY-3202)
    * A race condition in restoring files that share content has been
      fixed. The race involved changing the contents of the restored
      file before references to that file are restored. (CNY-3203)

Changes in 2.0.46:
  o New Features
    * If python-keyutils is available, cvc will try to interact with
      the user's session keyring. (CNY-3190)
    * Conary now uses xz in preference to unlzma to decompress lzma
      data. (CNY-3194)
    * A new function, parseChangeSpec, that parses a single trove
      update specification such as name=ver1[flv1]--ver2[flv2], was
      added to cmdline.py. (CNY-3197)

  o Internal Changes:
    * The code path leading to getChangeSet was reworked to use